# RootSimulation

./: .gitignore  CMakeLists.txt  Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  README.md  ResonanceType.hpp  main.cpp
analysis/: CMakeLists.txt  analysis.cpp  myStyle.hpp
generation/: CMakeLists.txt  Particle.cpp  Particle.hpp  ParticleType.hpp  ResonanceType.cpp  main.cpp  test.cpp
generation/src/: CMakeLists.txt  Particle.cpp
tex/: CMakeLists.txt  Relazione.lol  Relazione.tex
